[package]
name = "cache-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
thiserror = "1"

figment = { version = "0.10.6", features = ["json", "yaml"] }
uuid = { version = "0.8", features = ["v4"] }

base64 = "0.13.0"
easy-ext = "1"
gethostname = "0.2.1"
itertools = "0.10"
log = "0.4"
once_cell = "1.13"
reqwest = "0.11"
reqwest-middleware = "0.1"
reqwest-tracing = { version = "0.2", features = ["opentelemetry_0_16"] }
rocket_prometheus = "0.10.0-rc.3"
secrecy = "0.8"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
serde_with = { version = "1", features = ["base64"] }
sha2 = "0.10"
strum_macros = "0.24"
tracing = "0.1"
tracing-log = "0.1"
typed-builder = "0.10"
url = "2.2.2"

lazy_static = "1.4.0"
opentelemetry = "=0.16"
serde_urlencoded = "0.7.1"
display_json = "0.2.1"
